# inboxed.email

./: .env.example  .eslintrc.cjs  CHANGELOG.md  OAUTH_SETUP.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_IMPLEMENTATION.md  PHASE_4_QUICKSTART.md  PLAN.md  PROGRESS.md  README.md  TASKS.json  TASKS.md  clear-app-data-keep-models.sh  clear-app-data.sh  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: account.rs  mod.rs  oauth.rs  storage.rs
src-tauri/src/commands/: account.rs  ai.rs  auth.rs  cache.rs  db.rs  email.rs  mod.rs  rag.rs
src-tauri/src/db/: email_db.rs  mod.rs  schema.rs  vector_db.rs
src-tauri/src/email/: gmail.rs  idle.rs  imap_client.rs  mod.rs  provider.rs  server_presets.rs  types.rs
src-tauri/src/llm/: embeddings.rs  engine.rs  mod.rs  model_manager.rs  rag.rs  summarizer.rs
src/components/Auth/: LoginScreen.tsx
src/components/Compose/: ComposeModal.tsx  index.ts
src/components/EmailList/: EmailList.tsx
src/components/EmailViewer/: EmailViewer.tsx  index.ts
src/components/Settings/: ModelSettings.tsx  StorageSettings.tsx  index.ts
src/components/Setup/: ModelDownload.tsx  index.ts
src/components/Sidebar/: Sidebar.tsx
src/components/SmartInbox/: ChatPanel.tsx  SmartInbox.tsx  index.ts
src/stores/: accountStore.ts  aiStore.ts  authStore.ts  emailStore.ts  ragStore.ts  smartInboxStore.ts
website/: index.html  package-lock.json  package.json
website/docs/: SEO.md
website/public/: sitemap.xml
website/src/: App.tsx  index.css  main.tsx
website/src/components/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  SEO.tsx
website/src/pages/: BlogIndex.tsx  ComparisonSuperhuman.tsx  ComparisonZero.tsx  Home.tsx  Privacy.tsx  Terms.tsx
website/src/pages/blog/: PostLocalAI.tsx
