[package]
name = "inboxed"
version = "0.1.0"
description = "AI-powered email desktop client with local LLM"
authors = ["Inboxed Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inboxed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = "4.4"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
urlencoding = "2.1"

# LLM inference with Metal support
llama-cpp-2 = "0.1"
hf-hub = "0.3"
futures = "0.3"
directories = "5.0"

