[package]
name = "inboxed"
version = "0.1.0"
description = "AI-powered email desktop client with local LLM"
authors = ["Inboxed Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inboxed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = "4.4"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
urlencoding = "2.1"
dotenvy = "0.15"

# LLM inference with Metal support
llama-cpp-2 = "0.1"
hf-hub = "0.3"
futures = "0.3"
directories = "5.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Embeddings with Metal acceleration
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
safetensors = "0.5"

# IMAP/SMTP
async-trait = "0.1"
async-imap = "0.10"
async-native-tls = "0.5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mail-parser = "0.9"
uuid = { version = "1", features = ["v4"] }

# Utilities
md5 = "0.7"
